add suizan hook + update state

--- a/furniture/scrap-cart/README.ms
+++ b/furniture/scrap-cart/README.ms
@@ -3,9 +3,9 @@
 [x] square off ends
 [x] cut to length
 [x] cut angle ends
-[ ] assemble two sides
-[ ] trim extra material
-[ ] assemble base frame
-[ ] attach stretchers between sides
-[ ] attach top to base
-[ ] attach wheels to cart
+[x] assemble two sides
+[x] trim extra material
+[x] assemble base frame
+[x] attach stretchers between sides
+[x] attach top to base
+[x] attach wheels to cart
